--- a/Mobile App/app/src/main/res/layout/activity_send_requirement.xml
+++ b/Mobile App/app/src/main/res/layout/activity_send_requirement.xml
@@ -45,6 +45,7 @@
         android:layout_marginTop="20dp"
         android:layout_marginRight="20dp"
         android:layout_marginBottom="20dp"
+        app:cardBackgroundColor="@color/white"
         app:layout_constraintBottom_toTopOf="@+id/validId_activitySendRequirements"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
@@ -82,11 +83,12 @@
         android:layout_height="0dp"
         android:layout_marginLeft="20dp"
         android:layout_marginRight="20dp"
+        app:cardBackgroundColor="@color/white"
         app:layout_constraintBottom_toTopOf="@+id/certification_activitySendRequirements"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/selfieActivitySendRequirements" >
+        app:layout_constraintTop_toBottomOf="@+id/selfieActivitySendRequirements">
 
         <ImageView
             android:layout_width="match_parent"
@@ -121,11 +123,12 @@
         android:layout_marginTop="20dp"
         android:layout_marginRight="20dp"
         android:layout_marginBottom="20dp"
+        app:cardBackgroundColor="@color/white"
         app:layout_constraintBottom_toTopOf="@+id/submitButton_activitySendRequirements"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/validId_activitySendRequirements" >
+        app:layout_constraintTop_toBottomOf="@+id/validId_activitySendRequirements">
 
         <ImageView
             android:layout_width="match_parent"
