--- a/Mobile App/app/src/main/res/layout/activity_about_me_as_seller.xml
+++ b/Mobile App/app/src/main/res/layout/activity_about_me_as_seller.xml
@@ -295,6 +295,7 @@
                     android:layout_marginStart="70dp"
                     android:layout_marginTop="10dp"
                     android:layout_marginEnd="70dp"
+                    app:cardBackgroundColor="@color/white"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/toolBar_activityAboutMeAsSeller">
