--- a/Mobile App/app/src/main/res/layout/activity_create_services.xml
+++ b/Mobile App/app/src/main/res/layout/activity_create_services.xml
@@ -33,6 +33,7 @@
                     android:layout_marginTop="10dp"
                     android:layout_marginEnd="10dp"
                     android:visibility="visible"
+                    app:cardBackgroundColor="@color/white"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/toolBar_activityCreateServices">
