--- a/Mobile App/app/src/main/res/layout/fragment_profile.xml
+++ b/Mobile App/app/src/main/res/layout/fragment_profile.xml
@@ -82,6 +82,7 @@
             android:layout_marginBottom="15dp"
             android:clickable="true"
             android:elevation="2dp"
+            app:cardBackgroundColor="@color/white"
             app:cardCornerRadius="7dp"
             app:cardElevation="2dp"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -116,6 +117,7 @@
             android:layout_marginBottom="15dp"
             android:clickable="true"
             android:elevation="2dp"
+            app:cardBackgroundColor="@color/white"
             app:cardCornerRadius="7dp"
             app:cardElevation="2dp"
             app:layout_constraintBottom_toBottomOf="parent"
