--- a/Mobile App/app/src/main/res/layout/row_reviews.xml
+++ b/Mobile App/app/src/main/res/layout/row_reviews.xml
@@ -14,6 +14,7 @@
         android:layout_marginStart="20dp"
         android:layout_marginEnd="20dp"
         android:background="@color/backGroundShadow"
+        app:cardBackgroundColor="@color/white"
         app:cardCornerRadius="10dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
