--- a/Mobile App/app/src/main/res/layout/row_service_requests.xml
+++ b/Mobile App/app/src/main/res/layout/row_service_requests.xml
@@ -29,7 +29,7 @@
         android:layout_marginEnd="40dp"
         android:fontFamily="sans-serif-black"
         android:text="TITLE"
-        android:textSize="18sp"
+        android:textSize="14sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/imageView_serviceRowRequest"
         app:layout_constraintTop_toTopOf="parent" />
@@ -38,12 +38,12 @@
         android:id="@+id/descriptionTextView_serviceRowRequest"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="15dp"
-        android:layout_marginEnd="10dp"
+        android:layout_marginStart="5dp"
+        android:layout_marginEnd="40dp"
         android:maxHeight="30dp"
         android:text="Description"
-        app:layout_constraintEnd_toStartOf="@+id/categoryTextView_serviceRowRequests"
-        app:layout_constraintStart_toStartOf="@+id/title_serviceRowRequest"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/imageView_serviceRowRequest"
         app:layout_constraintTop_toBottomOf="@+id/title_serviceRowRequest" />
 
     <TextView
@@ -57,8 +57,9 @@
 
     <TextView
         android:id="@+id/categoryTextView_serviceRowRequests"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginStart="5dp"
         android:background="@color/anotherLightBlue"
         android:fontFamily="sans-serif-condensed"
         android:padding="5dp"
@@ -66,6 +67,7 @@
         android:textColor="#FFFFFF"
         android:textSize="14sp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+        app:layout_constraintStart_toEndOf="@+id/imageView_serviceRowRequest"
+        app:layout_constraintTop_toBottomOf="@+id/priceTextView_serviceRowRequest" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
