--- a/Mobile App/app/src/main/res/layout/row_bookings.xml
+++ b/Mobile App/app/src/main/res/layout/row_bookings.xml
@@ -25,8 +25,8 @@
             android:padding="5dp"
             android:text="STATUS"
             android:textColor="#FFFFFF"
-            app:layout_constraintEnd_toEndOf="@+id/category_rowBookings"
-            app:layout_constraintStart_toStartOf="@+id/category_rowBookings"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
@@ -53,7 +53,7 @@
 
         <TextView
             android:id="@+id/category_rowBookings"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="5dp"
             android:background="@drawable/gradient"
