--- a/Mobile App/app/src/main/res/layout/row_service.xml
+++ b/Mobile App/app/src/main/res/layout/row_service.xml
@@ -35,7 +35,7 @@
         app:layout_constraintStart_toEndOf="@+id/imageView_serviceRow"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <TextView
+    <com.codesgood.views.JustifiedTextView
         android:id="@+id/descriptionTextView_serviceRow"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
