--- a/Mobile App/app/src/main/res/layout/activity_display_specific_service.xml
+++ b/Mobile App/app/src/main/res/layout/activity_display_specific_service.xml
@@ -81,7 +81,7 @@
                         android:layout_height="match_parent"
                         android:padding="10dp">
 
-                        <TextView
+                        <com.codesgood.views.JustifiedTextView
                             android:id="@+id/name_activityDisplaySpecificService"
                             android:layout_width="0dp"
                             android:layout_height="wrap_content"
@@ -184,13 +184,12 @@
                             app:layout_constraintStart_toStartOf="parent"
                             app:layout_constraintTop_toBottomOf="@+id/view19" />
 
-                        <TextView
+                        <com.codesgood.views.JustifiedTextView
                             android:id="@+id/serviceDescription_activityDisplaySpecificService"
                             android:layout_width="0dp"
                             android:layout_height="wrap_content"
                             android:layout_marginTop="5dp"
                             android:drawableLeft="@drawable/ic_description"
-                            android:gravity="center|left"
                             android:text="TextView"
                             app:layout_constraintEnd_toEndOf="parent"
                             app:layout_constraintStart_toStartOf="parent"
