--- a/Mobile App/app/src/main/res/layout/fragment_bottom_booking_details.xml
+++ b/Mobile App/app/src/main/res/layout/fragment_bottom_booking_details.xml
@@ -55,7 +55,7 @@
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintTop_toBottomOf="@+id/price_orderDetails" />
 
-      <TextView
+      <com.codesgood.views.JustifiedTextView
           android:id="@+id/title_orderDetails"
           android:layout_width="0dp"
           android:layout_height="wrap_content"
@@ -66,7 +66,7 @@
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintTop_toBottomOf="@+id/category_orderDetails" />
 
-      <TextView
+      <com.codesgood.views.JustifiedTextView
           android:id="@+id/description_orderDetails"
           android:layout_width="0dp"
           android:layout_height="wrap_content"
@@ -77,7 +77,7 @@
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintTop_toBottomOf="@+id/title_orderDetails" />
 
-      <TextView
+      <com.codesgood.views.JustifiedTextView
           android:id="@+id/dateAndTimeOrdered_orderDetails"
           android:layout_width="0dp"
           android:layout_height="wrap_content"
@@ -160,11 +160,12 @@
 
       <TextView
           android:id="@+id/address_fragmentBottomBookingDetails"
-          android:layout_width="wrap_content"
+          android:layout_width="0dp"
           android:layout_height="wrap_content"
           android:drawableLeft="@drawable/ic_location"
           android:gravity="center|left"
           android:text="Address:"
+          app:layout_constraintEnd_toEndOf="parent"
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintTop_toBottomOf="@+id/time_orderDetails" />
 
