--- a/Mobile App/app/src/main/res/layout/fragment_bottom_show_request.xml
+++ b/Mobile App/app/src/main/res/layout/fragment_bottom_show_request.xml
@@ -34,7 +34,7 @@
         app:layout_constraintStart_toEndOf="@+id/imageVIew_fragmentBottomShowRequest"
         app:layout_constraintTop_toBottomOf="@+id/imageVIew_fragmentBottomShowRequest" />
 
-    <TextView
+    <com.codesgood.views.JustifiedTextView
         android:id="@+id/textView_fragmentBottomShowRequest"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
@@ -43,8 +43,9 @@
         android:textAlignment="gravity"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.902"
+        app:layout_constraintHorizontal_bias="0.512"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/floatingActionButton_fragmentBottomShowRequest" />
+        app:layout_constraintTop_toBottomOf="@+id/floatingActionButton_fragmentBottomShowRequest"
+        app:layout_constraintVertical_bias="0.0" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
