--- a/Mobile App/app/src/main/res/layout/fragment_bottom_showprofile.xml
+++ b/Mobile App/app/src/main/res/layout/fragment_bottom_showprofile.xml
@@ -77,9 +77,9 @@
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/textView3">
 
-                    <TextView
+                    <com.codesgood.views.JustifiedTextView
                         android:id="@+id/bio_fragmentBottomShowProfile"
-                        android:layout_width="wrap_content"
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:padding="10dp"
                         android:text="Bio" />
@@ -98,9 +98,9 @@
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/textView26">
 
-                    <TextView
+                    <com.codesgood.views.JustifiedTextView
                         android:id="@+id/number_fragmentBottomShowProfile"
-                        android:layout_width="wrap_content"
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:padding="10dp"
                         android:text="Number" />
@@ -142,7 +142,7 @@
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/textView16">
 
-                    <TextView
+                    <com.codesgood.views.JustifiedTextView
                         android:id="@+id/sellingDescriptionTextView_fragmentBottomShowProfile"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
@@ -212,7 +212,7 @@
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/textView18">
 
-                    <TextView
+                    <com.codesgood.views.JustifiedTextView
                         android:id="@+id/previousSchool_fragmentBottomShowProfile"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
@@ -233,7 +233,7 @@
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/textView20">
 
-                    <TextView
+                    <com.codesgood.views.JustifiedTextView
                         android:id="@+id/educationalAttainment_fragmentBottomShowProfile"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
