--- a/Mobile App/app/src/main/res/layout/row_service_created.xml
+++ b/Mobile App/app/src/main/res/layout/row_service_created.xml
@@ -17,14 +17,17 @@
 
     <TextView
         android:id="@+id/titleTextView_serviceCreatedRow"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:text="Title:"
+        android:layout_marginEnd="10dp"
         android:maxWidth="220dp"
+        android:text="Title:"
+        app:layout_constraintEnd_toStartOf="@+id/cardView_serviceCreatedRow"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/categoryTextView_serviceCreatedRow" />
 
-    <TextView
+    <com.codesgood.views.JustifiedTextView
         android:id="@+id/descriptionTextView_serviceCreatedRow"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
