--- a/Mobile App/app/src/main/res/layout/activity_manage_request.xml
+++ b/Mobile App/app/src/main/res/layout/activity_manage_request.xml
@@ -19,17 +19,19 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <ListView
+    <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/requestListView_activityManageRequest"
         android:layout_width="match_parent"
         android:layout_height="0dp"
+        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/toolBar_activityManageRequest" >
+        app:layout_constraintTop_toBottomOf="@+id/toolBar_activityManageRequest"
+        app:layout_constraintVertical_bias="1.0">
 
-    </ListView>
+    </androidx.recyclerview.widget.RecyclerView>
 
     <ImageView
         android:id="@+id/hideThisImageView_activityManageRequest"
