--- a/Mobile App/app/src/main/res/layout/fragment_bottom_booking_details_seller.xml
+++ b/Mobile App/app/src/main/res/layout/fragment_bottom_booking_details_seller.xml
@@ -148,7 +148,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/button_fragmentBottomBookingDetailsSeller" />
 
-    <com.codesgood.views.JustifiedTextView
+    <TextView
         android:id="@+id/dandt_fragmentBottomBookingDetailsSeller"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
