--- a/Mobile App/app/src/main/res/layout/fragment_bottom_booking_details.xml
+++ b/Mobile App/app/src/main/res/layout/fragment_bottom_booking_details.xml
@@ -77,7 +77,7 @@
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintTop_toBottomOf="@+id/title_orderDetails" />
 
-      <com.codesgood.views.JustifiedTextView
+      <TextView
           android:id="@+id/dateAndTimeOrdered_orderDetails"
           android:layout_width="0dp"
           android:layout_height="wrap_content"
