--- a/Admin Web App/quickservice/web/templates/web/index.html
+++ b/Admin Web App/quickservice/web/templates/web/index.html
@@ -1,13 +1,16 @@
 {% extends "web/layout.html" %}
-
-
-
+{% load static %}
 {% block body %}
 
-<nav id="topnav">
-    <a href="#" id="topnav-centered"><h1>Verification</h1></a>
-    <a href="{% url 'logout' %}" id="topnav-right">Log Out</a>
-</nav>
+<!--This is for the nav-->
+	<center>
+		<nav id="topnav"  >
+			<a href="{%url 'index'%}" class="active" >VERIFICATION</a>
+			<a href="{%url 'charts'%}" >CHARTS</a>
+			<a href="{% url 'logout' %}" >LOG OUT</a>
+		</nav>
+	</center>
+<!--This is for the nav-->
 
 
 
@@ -25,27 +28,7 @@
     </tbody>
 </table>
 
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-<script src="https://www.gstatic.com/firebasejs/8.2.4/firebase-app.js"></script>
-<script src="https://www.gstatic.com/firebasejs/8.2.4/firebase-database.js"></script>
-<script src="https://code.jquery.com/jquery-3.1.0.js"></script>
-<script src="https://www.gstatic.com/firebasejs/8.2.4/firebase-auth.js"></script>
-
 <script>
-    var firebaseConfig = {
-        apiKey: "AIzaSyD3xvk1o2I1VZdgsQYUABU96rzlzY3gNjw",
-        authDomain: "course-project-88fec.firebaseapp.com",
-        databaseURL: "https://course-project-88fec.firebaseio.com",
-        projectId: "course-project-88fec",
-        storageBucket: "course-project-88fec.appspot.com",
-        messagingSenderId: "412985801998",
-        appId: "1:412985801998:web:bb774d95fbacbb188aeb5f",
-        measurementId: "G-BZ38VP53KV"
-    };
-    // Initialize Firebase
-    firebase.initializeApp(firebaseConfig);
-    var database = firebase.database();
-
 
 
     //**********************INDEX.HTML*********************//
