--- a/Admin Web App/quickservice/web/templates/web/charts.html
+++ b/Admin Web App/quickservice/web/templates/web/charts.html
@@ -3,7 +3,8 @@
 <!--This is for the nav-->
 <center>
   <nav id="topnav">
-    <a href="{%url 'index'%}">VERIFICATION</a>
+    <a href="{%url 'index'%}">SERVICE PROVIDER VERIFICATION</a>
+    <a href="{%url 'verifyclient'%}">CLIENT VERIFICATION</a>
     <a href="{%url 'charts'%}" class="active">CHARTS</a>
     <a href="{% url 'logout' %}">LOG OUT</a>
   </nav>
