--- a/Mobile App/app/src/main/res/menu/menu_edit_delete.xml
+++ b/Mobile App/app/src/main/res/menu/menu_edit_delete.xml
@@ -1,5 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
+
+    <item
+        android:id="@+id/checkMessages"
+        android:title="Check Messages"
+        android:icon="@drawable/ic_message"
+        android:visible="false"
+        />
     <item
         android:id="@+id/delete"
         android:title="Delete"
